[FIX] web_enterprise: search icon not aligned in Settings on mobile
This commit fixes the bad padding used by the base settings app.

closes odoo/enterprise#6077

Related: odoo/odoo#38499

--- a/web_enterprise/static/src/scss/base_settings_mobile.scss
+++ b/web_enterprise/static/src/scss/base_settings_mobile.scss
@@ -58,4 +58,8 @@
             }
         }
     }
+
+    .o_action .o_control_panel {
+        @include o-webclient-padding($top: 10px, $bottom: 10px);
+    }
 }
